remove Spring framework and using JavaFX14.